--- a/How-to-FMI/app/views/forum.html
+++ b/How-to-FMI/app/views/forum.html
@@ -1,19 +1,18 @@
-<meta charset="utf-8">
 <div class="container">
 
     <div class="row">
 
-        <div class="col-lg-12">
-            <h1 class="page-header">Форум
+        <div class="col-lg-12" >
+            <h1 class="page-header">Р¤РѕСЂСѓРј
             </h1>
         <div class="col-lg-14">
-		<div class="well well-lg">
+		<div class="well well-lg" id="thread">
 		<div class="col-md-6">
 		<button class="btn btn-warning" type="button">New Thread</button>
 		</div>
 	
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Търси във форума...">
+      <input type="text" class="form-control" placeholder="РўСЉСЂСЃРµРЅРµ РІСЉРІ С„РѕСЂСѓРјР°...">
       <span class="input-group-btn">
         <button class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span>  Search</button>
       </span>
@@ -30,22 +29,22 @@
     <div class="row">
 
         <div class="col-md-1">
-				<img src="triangle-grey.jpg" class="img-responsive" height="50" width="50">
+				<img src="resources/images/triangle-grey.png" class="img-responsive" height="50" width="50">
         </div>
         <div class="col-md-8">
-            <h4><a href="blog-post.html">Какви са добрите практики при проектиране на интерфейс?</a>
+            <h4><a href="blog-post.html">РљР°РєРІРё СЃР° РґРѕР±СЂРёС‚Рµ РїСЂР°РєС‚РёРєРё РїСЂРё РїСЂРѕРµРєС‚РёСЂР°РЅРµ РЅР° РёРЅС‚РµСЂС„РµР№СЃ?</a>
             </h4>
 
-            <p>Запчнато от <a href="#">Иван Иванов</a> 23 Март 2017
+            <p>Р—Р°РїРѕС‡РЅР°С‚Рѕ РѕС‚ <a href="#">РРІР°РЅ РРІР°РЅРѕРІ</a> 23 РњР°СЂС‚ 2017
             </p>
         </div>
 		<div class="col-md-1">
-		<img src="person.png" class="img-responsive" height="50" width="40"  	>
-		<p>участници</p>
+		<img src="resources/images/person.png" class="img-responsive" height="50" width="40"  	>
+		<p>СѓС‡Р°СЃС‚РЅРёС†Рё</p>
 		</div>
 		<div class="col-md-1">
 		<img src="bubble.jpg" class="img-responsive" height="20" width="30">
-		<p>коментара</p>
+		<p>РєРѕРјРµРЅС‚Р°СЂР°</p>
 		</div>
 
     </div>
@@ -55,22 +54,22 @@
 	<div class="row">
 
         <div class="col-md-1">
-				<img src="triangle-grey.jpg" class="img-responsive" height="50" width="50">
+				<img src="resources/images/triangle-grey.png" class="img-responsive" height="50" width="50">
         </div>
         <div class="col-md-8">
-            <h4><a href="blog-post.html">Какви са добрите практики при проектиране на интерфейс?</a>
+            <h4><a href="blog-post.html">РљР°Рє РґР° РїСЂР°РІРёРј РґРёР·Р°Р№РЅ Р·Р° Android?</a>
             </h4>
 
-            <p>Запчнато от <a href="#">Иван Иванов</a> 23 Март 2017
+            <p>Р—Р°РїРѕС‡РЅР°С‚Рѕ РѕС‚ <a href="#">РРІР°РЅРєР° Р–РµР»РµРІР°</a> 15 РњР°СЂС‚ 2017
             </p>
         </div>
 		<div class="col-md-1">
 		<img src="person.png" class="img-responsive" height="50" width="40"  	>
-		<p>8 участници</p>
+		<p>8 СѓС‡Р°СЃС‚РЅРёС†Рё</p>
 		</div>
 		<div class="col-md-1">
 		<img src="bubble.jpg" class="img-responsive" height="20" width="30">
-		<p>12 коментара</p>
+		<p>12 РєРѕРјРµРЅС‚Р°СЂР°</p>
 		</div>
 
     </div>
@@ -80,27 +79,50 @@
 	<div class="row">
 
         <div class="col-md-1">
-				<img src="triangle-grey.jpg" class="img-responsive" height="50" width="50">
+				<img src="resources/images/triangle-grey.png" class="img-responsive" height="50" width="50">
         </div>
         <div class="col-md-8">
-            <h4><a href="blog-post.html">Какви са добрите практики при проектиране на интерфейс?</a>
+            <h4><a href="blog-post.html">РљР°РєРІРё РґР° РїСЂР°РІРёРј РґРёР·Р°Р№РЅ Р·Р° iOS?</a>
             </h4>
 
-            <p>Запчнато от <a href="#">Иван Иванов</a> 23 Март 2017
+            <p>Р—Р°РїРѕС‡РЅР°С‚Рѕ РѕС‚ <a href="#">Р”РёРјРёС‚СЉСЂ Р“РµРѕСЂРіРёРµРІ</a> 23 РњР°СЂС‚ 2017
             </p>
         </div>
 		<div class="col-md-1">
 		<img src="person.png" class="img-responsive" height="50" width="40"  	>
-		<p>8 участници</p>
+		<p>8 СѓС‡Р°СЃС‚РЅРёС†Рё</p>
 		</div>
 		<div class="col-md-1">
 		<img src="bubble.jpg" class="img-responsive" height="20" width="30">
-		<p>12 коментара</p>
+		<p>12 РєРѕРјРµРЅС‚Р°СЂР°</p>
 		</div>
 
     </div>
 
     <hr>
+	
+	<div class="row">
+
+        <div class="col-md-1">
+				<img src="resources/images/triangle-grey.png" class="img-responsive" height="50" width="50">
+        </div>
+        <div class="col-md-8">
+            <h4><a href="blog-post.html">РљРѕРё СЃР° РЅР°Р№-РґРѕР±СЂРёС‚Рµ С„СЂРµР№РјСѓРѕСЂС†Рё Р·Р° РёР·РіСЂР°Р¶РґР°РЅРµ РЅР° СѓРµР± СЃС‚СЂР°РЅРёС†Рё?</a>
+            </h4>
+
+            <p>Р—Р°РїРѕС‡РЅР°С‚Рѕ РѕС‚ <a href="#">Р”РёРјРёС‚СЉСЂ Р“РµРѕСЂРіРёРµРІ</a> 23 РњР°СЂС‚ 2017
+            </p>
+        </div>
+		<div class="col-md-1">
+		<img src="person.png" class="img-responsive" height="50" width="40"  	>
+		<p>8 СѓС‡Р°СЃС‚РЅРёС†Рё</p>
+		</div>
+		<div class="col-md-1">
+		<img src="bubble.jpg" class="img-responsive" height="20" width="30">
+		<p>12 РєРѕРјРµРЅС‚Р°СЂР°</p>
+		</div>
+
+    </div>
 
 		<div class="col-md-6">
 		<button class="btn btn-warning" type="button">New Thread</button>
