--- a/How-to-FMI/app/views/directives/feed.html
+++ b/How-to-FMI/app/views/directives/feed.html
@@ -2,14 +2,14 @@
   <tr ng-repeat="new in news">
     <td><img src="{{'resources/images/' + new.image}}"></td>
     <td>
-      <h3>{{new.title}}</h3>
+      <a href="{{ new.ref }}"><h3>{{new.title}}</h3></a>
       <h4><b>{{new.date}}</b></h4>
       <p>{{new.content}}</p>
     </td>
     <td ng-if="new.day" class="notification-day">
-      <p>преди</p>  
-      <p>{{new.day[1]}}</p>  
-      <p>{{new.day[2]}}</p>   
+      <em>{{new.day[0]}}</em>
+      <strong>{{new.day[1]}}</strong>
+      <span>{{new.day[2]}}</span>
     </td>
   </tr>
 </table>
