--- a/How-to-FMI/app/views/home.html
+++ b/How-to-FMI/app/views/home.html
@@ -1,17 +1,20 @@
-<div ng-controller="MainCtrl">
+<div ng-controller="MainCtrl" id="home-view">
     <div id="main-events-notifications">
         <div id="notifications-box-home" class="mainView">
           <h1 class="feed-title">Известия</h1>
           <div feed class="notifications-feed"  id="notifications-feed-main" news="notifications"></div>    
+          <a href="#!/notifications">Преглед на всички известия</a>
         </div>
         <aside id="aside-calendar" ng-controller="SmallCalendarController" class="mainView">
-          <h2>Идващи събития</h2>
+          <h2>Предстоящи събития</h2>
           <table>
               <tr ng-repeat="event in eventSources.events">
                   <td>
-                      <p>{{ event.start[0] }}</p>
-                      <p>{{ event.start[1] }}</p>
-                      <p>{{ event.start[2] }}</p>
+                    <time class="icon">
+                      <em>{{ event.start[0] }}</em>
+                      <strong>{{ event.start[1] }}</strong>
+                      <span>{{ event.start[2] }}</span>
+                    </time>
                   </td>
                   <td>{{ event.title }}</td>
               </tr>
