--- a/How-to-FMI/app/css/style.css
+++ b/How-to-FMI/app/css/style.css
@@ -126,7 +126,7 @@ nav ul li:last-child {
     margin: 10em auto;
 }
 
-nav > div > a > img {
+nav > div a img {
     height: 60px;
     margin-left: 1em;
 }
@@ -142,7 +142,7 @@ header {
 	z-index: 99;
 }
 
-header > a > img {
+header > a img {
     width: 2em;
 }
 
@@ -238,3 +238,49 @@ nav > div > a:hover {
         width: 100%;
     }
 }
+
+.dropbtn {
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    background-color: Transparent;
+    outline: none;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    opacity: 0.6;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background-color: white;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
