--- a/How-to-FMI/app/views/home.html
+++ b/How-to-FMI/app/views/home.html
@@ -19,6 +19,7 @@
                   <td>{{ event.title }}</td>
               </tr>
           </table>
+          <a href="#!/schedule">Преглед на целия график</a>
       </aside>
     </div>
 
