--- a/How-to-FMI/app/css/style.css
+++ b/How-to-FMI/app/css/style.css
@@ -120,6 +120,9 @@ nav ul li:last-child {
     margin: 0 auto;
     background-color: rgba(255,255,255,0.95);
     border-radius: 10px;
+	padding-left: 4em;
+	padding-right: 4em;
+	padding-bottom: 2em;
 }
 
 #contentView {
