Adding some new stuff.

--- a/How-to-FMI/app/views/forumMain.html
+++ b/How-to-FMI/app/views/forumMain.html
@@ -22,7 +22,7 @@
     <div class="input-group">
       <input type="text" class="form-control" placeholder="Търси във форума...">
       <span class="input-group-btn">
-        <button class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span>  Search</button>
+        <button class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span>  Търси</button>
       </span>
 	 </div>
 	 </div>
