--- a/How-to-FMI/app/views/gradesMain.html
+++ b/How-to-FMI/app/views/gradesMain.html
@@ -1,25 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title></title>
-
-    <!-- Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- My custom styles-->
-    <link href="main.css" rel="stylesheet">
-
-  	
-		
-  </head>
-
-  <body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-
-<div class="container">
+<div class="container mainView">
 
     <div class="row">
 
@@ -111,5 +90,4 @@
 </div>
 	
 <!-- /.container -->
-  </body>
-</html>
+
