--- a/How-to-FMI/app/views/forum.html
+++ b/How-to-FMI/app/views/forum.html
@@ -32,7 +32,7 @@
 				<img src="resources/images/triangle-grey.png" class="img-responsive" height="50" width="50">
         </div>
         <div class="col-md-8">
-            <h4><a href="#!/forum/empty">Какви са добрите практики при проектиране на интерфейс?</a>
+            <h4><a href="#!/forum/comments">Какви са добрите практики при проектиране на интерфейс?</a>
             </h4>
 
             <p>Започнато от <a href="#!/forum/empty">Иван Иванов</a> 23 Март 2017
