--- a/How-to-FMI/app/css/login-style.css
+++ b/How-to-FMI/app/css/login-style.css
@@ -50,3 +50,9 @@ aside.login-column div.mainView {
 	font-size: 24px;
 	width: 100%;
 }
+#other-logins {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	justify-content: space-around;
+}
