navigation directive added

--- a/How-to-FMI/app/views/education.html
+++ b/How-to-FMI/app/views/education.html
@@ -1,3 +1,5 @@
+<div navigationpath></div>
+
 <div id="education-filter" class="mainView">
 	<div id="filter-degrees">
 		<h3>Учебни разписания</h3>
