--- a/How-to-FMI/app/css/style_2.css
+++ b/How-to-FMI/app/css/style_2.css
@@ -1,29 +1,33 @@
 /* --------------- Register --------------- */
 .register-div {
-	width: 40%;
+	width: 30%;
 	background-color: rgba(255,255,255,0.95);
 	border-radius: 2rem;
-	margin-left: 30%;
-	padding-left: 5%;
 	display: flex;
-	flex-direction: row;
+	margin: 0 auto;
+	flex-direction: column;
 	flex-wrap: wrap;
+	padding-left: 3.5rem;
+	padding-right: 3.5rem;
+	margin-bottom: 20rem;
+}
 
+.register-div  input {
+	width: 100%;
 }
 
 .register-div > h1 {
-	padding-left: 5%;
+	width: 100%;
 	padding-top: 2%;
 	padding-bottom: 2%;
 	align-self: center;
 }
 
 .register-form {
-	width: 40%;
+	width: 100%;
 	min-width: 16em;
 	font-size: 2rem;
 	position: relative;
-	left: 5%;
 	padding-bottom: 2em;
 	display: flex;
 	flex-direction: row;
@@ -53,7 +57,6 @@ input[type=submit], input[type=button] {
 	padding: .5rem .35rem;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
-	width: 90%;
 }
 
 @media only screen and (max-width: 1000px) {
