--- a/How-to-FMI/app/css/course-style.css
+++ b/How-to-FMI/app/css/course-style.css
@@ -13,8 +13,13 @@
 	width: 30%;
 }
 
+#course-view div.mainView img:hover {
+	opacity: 0.9;
+}
+
 #course-view div.mainView h1 {
 	margin: 0 auto;
+	margin-bottom: 3em;
 	text-align: center;	
 }
 #course-menu {
@@ -26,8 +31,83 @@
 	width: 100%;
 	padding: 1.6em;
 	background-color: white;
+	border-bottom: 
 }
 
 #course-menu button:hover {
 	background-color: rgba(186, 186, 186, 0.8);
+}
+
+/* border */
+#course-menu button, .hover-underline {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+#course-menu button:hover, .hover-underline:hover {
+  color: #000;
+}
+#course-menu button:before, .hover-underline:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.6s ease-in-out 0s;
+  transition: all 0.6s ease-in-out 0s;
+}
+#course-menu button:hover:before, .hover-underline:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+#course-view input[type="submit"] {
+	padding: 1em;
+    background-color: rgba(3, 34, 61, 0.8);
+}
+
+.opinion-course span.rating {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	width: 10%;
+}
+
+.opinion-course span.rating span {
+	margin-top: 0.6em;
+	margin-bottom: 0.6em;
+}
+
+.opinion-course > div{
+	display: flex;
+	flex-direction: row;
+}
+.opinion-course {
+	border-bottom: 1px solid #aaa;
+	padding-bottom: 6em;	
+
+
+}
+.opinion-course div {
+	margin-top: 0.6em;
+	margin-left: 1em;
+}
+
+.opinion-course p {
+	margin-top: 2em;
+}
+
+#discussion .opinion-course .profilepic {
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	background-color: red;
+	margin-right: 2em;
 }
