Schedule page addded

--- a/How-to-FMI/app/views/education.html
+++ b/How-to-FMI/app/views/education.html
@@ -1,4 +1,3 @@
-<div navigationpath></div>
 
 <div id="education-filter" class="mainView">
 	<div id="filter-degrees">
@@ -6,39 +5,39 @@
 		<div>
 			<h4><b>Бакалаври</b></h4>
 			<ul>
-				<li>СИ</li>
-				<li>КН</li>
-				<li>И</li>
-				<li>ИС</li>
-				<li>ПМ</li>
+				<li><a href="#!/education/schedule/bachelors/software_engineering">СИ</a></li>
+				<li><a href="#!/education/schedule/bachelors/computer_science">КН</a></li>
+				<li><a href="#!/education/schedule/bachelors/informatics">И</a></li>
+				<li><a href="#!/education/schedule/bachelors/informatics systems">ИС</a></li>
+				<li><a href="#!/education/schedule/bachelors/applicable_mathematics">ПМ</a></li>
 			</ul>
 		</div>
 		<div>
 			<h4><b>Магистри</b></h4>
 			<ul>
-				<li>СИ</li>
-				<li>КН</li>
-				<li>И</li>
-				<li>ИС</li>
-				<li>ПМ</li>
+				<li><a href="">СИ</a></li>
+				<li><a href="">КН</a></li>
+				<li><a href="">И</a></li>
+				<li><a href="">ИС</a></li>
+				<li><a href="">ПМ</a></li>
 			</ul>			
 		</div>
 	</div><!-- 
  --><div id="filter-courses">
 		<h3>Дисциплини</h3>
 		<ul>
-			<li>Избираеми</li>
-			<li>Задължителни</li>
+			<li><a href="#!/education/disciplines?electives=true">Избираеми</a></li>
+			<li><a href="#!/education/disciplines?compulsory=true">Задължителни</a></li>
 		</ul>
 	</div><!-- 
  --><div id="filter-materials">
 		<h3>Материали</h3>
 		<ul>
-			<li>Полезни връзки</li>
-			<li>Записки от курсове</li>
-			<li>Учебници</li>
-			<li>Видео материали</li>
-			<li>Онлайн курсове</li>
+			<li><a href="">Полезни връзки</a></li>
+			<li><a href="">Записки от курсове</a></li>
+			<li><a href="">Учебници</a></li>
+			<li><a href="">Видео материали</a></li>
+			<li><a href="">Онлайн курсове</a></li>
 		</ul>
 	</div>
 </div>
