--- a/How-to-FMI/app/views/home.html
+++ b/How-to-FMI/app/views/home.html
@@ -8,7 +8,7 @@
         <aside id="aside-calendar" class="mainView">
           <h2>Предстоящи събития</h2>
           <div smallcalendar event-sources="eventSources"></div>
-          <a href="#!/schedule">Преглед на целия график</a>
+          <a href="#!/calendar">Преглед на целия график</a>
         </aside>
     </div>
 
