--- a/How-to-FMI/app/views/schedule-degree.html
+++ b/How-to-FMI/app/views/schedule-degree.html
@@ -1,3 +1,4 @@
+<h1 style="color:white; font-size: 3em; width: 90%; margin: 0 auto; font-weight: bold;">Учебно разписание</h1>
 <div navigationpath></div>
 <div id="filterSchedule" class="mainView">
 	<h1>Изберете специалност и курс</h1>
