--- a/How-to-FMI/app/views/education.html
+++ b/How-to-FMI/app/views/education.html
@@ -31,9 +31,10 @@
 		</ul>
 	</div><!-- 
  --><div id="filter-materials">
-		<h3>Материали</h3>
+		<h3>Източници на знания</h3>
 		<ul>
-			<li><a href="">Полезни връзки</a></li>
+			<li><a href="#!/materials">Материали</a></li>
+			<li><a href="#!/">Полезни връзки</a></li>
 			<li><a href="">Записки от курсове</a></li>
 			<li><a href="">Учебници</a></li>
 			<li><a href="">Видео материали</a></li>
