--- a/How-to-FMI/app/css/part1.css
+++ b/How-to-FMI/app/css/part1.css
@@ -67,3 +67,6 @@ hr {
 }
 .btn-circle span { padding-right: 6px; }
 .embed-responsive { margin-bottom: 20px; }
+input[type="text"].form-control {
+    margin-top: 0px;
+}
