--- a/How-to-FMI/app/css/part1.css
+++ b/How-to-FMI/app/css/part1.css
@@ -70,3 +70,21 @@ hr {
 input[type="text"].form-control {
     margin-top: 0px;
 }
+div.container {
+    width: 90%;
+}
+#evolution .progress {
+    width: 100%;
+}
+#evolution {
+    width: 60%;
+    margin: 0 auto;
+}
+
+#evolution img {
+    width: 100%;
+}
+#google-calendar {
+    width: 100%;
+    text-align: center;
+}
