--- a/How-to-FMI/app/views/gradesElectives.html
+++ b/How-to-FMI/app/views/gradesElectives.html
@@ -112,16 +112,16 @@
   <br>
     </div>
 	<div class="col-lg-2"></div>
-	<div class="col-lg-6">
+	<div id="evolution">
 		<img src="resources/images/evolution.png" width="600">
 	    <strong>Кредити</strong>
-	      <div class="progress">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                <span class="sr-only">60% Complete (success)</span>
-            </div>
-            <span class="progress-type">36</span>
-            <span class="progress-completed">65</span>
-        </div>
+      <div class="progress">
+          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+              <span class="sr-only">60% Complete (success)</span>
+          </div>
+          <span class="progress-type">36</span>
+          <span class="progress-completed">65</span>
+      </div>
 </div>
 </div>
 	
