--- a/How-to-FMI/app/views/all-courses.html
+++ b/How-to-FMI/app/views/all-courses.html
@@ -31,7 +31,7 @@
 			<span ng-repeat="course in courses">
 				<div id="row" class="single-course-div">
 				<div class="col-md-3 col-sm-3 col-xs-3">
-					<img ng-src="{{course.img}}" class="img-responsive" height="250" style="display: block; margin: auto;">
+					<img ng-src="{{course.img}}" class="img-responsive" style="display: block; margin: auto;">
 				</div>
 				<div class="col-md-9 col-sm-9">
 					<h4><b> {{ course.name }} </b></h4>
