--- a/How-to-FMI/app/views/all-courses.html
+++ b/How-to-FMI/app/views/all-courses.html
@@ -6,8 +6,8 @@
 				<h3>Филтри</h3>
 				<div id="filters">
 					<h4>Вид</h4>
-					<input type="checkbox" name="type"> Задължителни дисциплини<br>
-  					<input type="checkbox" name="type" checked> Избираеми дисциплини<br>
+					<input type="checkbox" name="type" ng-checked="params.compulsory"> Задължителни дисциплини<br>
+  					<input type="checkbox" name="type" ng-checked="params.electives"> Избираеми дисциплини<br>
 
   					<h4>Специалност</h4>
   					<span ng-repeat="degree in bachelor_degrees" >
@@ -34,7 +34,7 @@
 						<img ng-src="{{course.img}}" class="img-responsive course-image" style="display: block; margin: auto;">
 					</div>
 					<div class="col-lg-9 col-xs-9">
-						<h4><b> {{ course.name }} </b></h4>
+						<h4><a href="#!/education/disciplines/{{course.ref}}"><b> {{ course.name }} </b></a></h4>
 						<p>Специалности: <b>{{ course.compatible_degrees }}</b></p>
 						<p>Категория: <b>{{ course.category }}</b></p>
 						<p>Курс: <b>{{ course.year }}</b></p>
