--- a/How-to-FMI/app/views/jobs.html
+++ b/How-to-FMI/app/views/jobs.html
@@ -17,12 +17,12 @@
 			<span ng-repeat="job in job_listings">
 				<div class="single-jobs-div">
 					<div class="col-lg-3 col-xs-3">
-						<img ng-src="{{job.img}}" class="img-responsive" id="course-image" style="display: block; margin: auto;">
+						<img ng-src="{{job.img}}" class="img-responsive job-image" style="display: block; margin: auto;">
 					</div>
-					<div class="col-lg-9 col-xs-9">
-						<h4><b> {{ job.name }} </b></h4>
+					<div class="col-lg-9 col-xs-9 single-job-div">
+						<a href="{{job.ref}}" class="job-links"><h4><b> {{ job.name }} </b></h4></a>
 						<p>Вид: <b>{{ job.type }}</b></p>
-						<p>Компания: <b>{{ job.company }}</b></p>
+						<p>Компания: <b>{{ job.company_name }}</b></p>
 						<p>Описание: {{ job.description }} </p>
 					</div>
 				</div>
